Sort card deck and fix delete for editing decks